--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,44 +19,6 @@ permissions:
   # pull-requests: read
 
 jobs:
-  engine:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '1.20'
-      - run: ./hack/make engine:lint
-
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '1.20'
-      - run: ./hack/make docs:lint
-
-  sdk-go:
-    name: "sdk / go"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '1.20'
-      - run: ./hack/make sdk:go:lint
-
-  sdk-python:
-    name: "sdk / python"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '1.20'
-      - run: ./hack/make sdk:python:lint
-
   sdk-nodejs:
     name: "sdk / nodejs"
     runs-on: ubuntu-latest
@@ -65,4 +27,5 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '1.20'
-      - run: ./hack/make sdk:nodejs:lint
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
