--- a/.github/workflows/_hack_make.yml
+++ b/.github/workflows/_hack_make.yml
@@ -15,58 +15,58 @@ on:
 
 jobs:
   # Use a free GitHub Actions runner when
-  # NOT running in the dagger/dagger repo 
-  github-free-runner:
-    if: ${{ github.repository != 'dagger/dagger' }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-          cache-dependency-path: "internal/mage/go.sum"
-      - name: ${{ inputs.mage-targets }}
-        run: |
-          if [ "${{ inputs.dev-engine }}" != "false" ]
-          then
-            ./hack/dev
-            export _EXPERIMENTAL_DAGGER_CLI_BIN="$PWD/bin/dagger"
-            chmod +x $_EXPERIMENTAL_DAGGER_CLI_BIN
-            export _EXPERIMENTAL_DAGGER_RUNNER_HOST=docker-container://dagger-engine.dev
-          fi
-          ./hack/make ${{ inputs.mage-targets }}
-        env:
-          _EXPERIMENTAL_DAGGER_CLOUD_TOKEN: "p.eyJ1IjogIjFiZjEwMmRjLWYyZmQtNDVhNi1iNzM1LTgxNzI1NGFkZDU2ZiIsICJpZCI6ICIwYzhmMGY2Yy00YjY1LTRhODktYTI0YS0yN2NjNWNhNzNmNTcifQ.Em92UDP-KmcNd80Y-euTS2IrRkIE8qTisP3SXYkQi3c"
-      - name: "ALWAYS print kernel logs - especialy useful on failure"
-        if: always()
-        run: sudo dmesg
+  # NOT running in the dagger/dagger repo
+  #github-free-runner:
+    #if: ${{ github.repository != 'dagger/dagger' }}
+    #runs-on: ubuntu-latest
+    #steps:
+      #- uses: actions/checkout@v3
+      #- uses: actions/setup-go@v4
+        #with:
+          #go-version: "1.20"
+          #cache-dependency-path: "internal/mage/go.sum"
+      #- name: ${{ inputs.mage-targets }}
+        #run: |
+          #if [ "${{ inputs.dev-engine }}" != "false" ]
+          #then
+            #./hack/dev
+            #export _EXPERIMENTAL_DAGGER_CLI_BIN="$PWD/bin/dagger"
+            #chmod +x $_EXPERIMENTAL_DAGGER_CLI_BIN
+            #export _EXPERIMENTAL_DAGGER_RUNNER_HOST=docker-container://dagger-engine.dev
+          #fi
+          #./hack/make ${{ inputs.mage-targets }}
+        #env:
+          #_EXPERIMENTAL_DAGGER_CLOUD_TOKEN: "p.eyJ1IjogIjFiZjEwMmRjLWYyZmQtNDVhNi1iNzM1LTgxNzI1NGFkZDU2ZiIsICJpZCI6ICIwYzhmMGY2Yy00YjY1LTRhODktYTI0YS0yN2NjNWNhNzNmNTcifQ.Em92UDP-KmcNd80Y-euTS2IrRkIE8qTisP3SXYkQi3c"
+      #- name: "ALWAYS print kernel logs - especialy useful on failure"
+        #if: always()
+        #run: sudo dmesg
 
   # Use a larger (paid) GitHub runner when
   # running the dagger/dagger repo (including PRs)
-  github-paid-runner:
-    if: ${{ github.repository == 'dagger/dagger' }}
-    runs-on: ubuntu-22.04-16c-64g-600gb
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-          cache-dependency-path: "internal/mage/go.sum"
-      - name: ${{ inputs.mage-targets }}
-        run: |
-          if [ "${{ inputs.dev-engine }}" != "false" ]
-          then
-            ./hack/dev
-            export _EXPERIMENTAL_DAGGER_CLI_BIN="$PWD/bin/dagger"
-            chmod +x $_EXPERIMENTAL_DAGGER_CLI_BIN
-            export _EXPERIMENTAL_DAGGER_RUNNER_HOST=docker-container://dagger-engine.dev
-          fi
-          ./hack/make ${{ inputs.mage-targets }}
-        env:
-          _EXPERIMENTAL_DAGGER_CLOUD_TOKEN: "p.eyJ1IjogIjFiZjEwMmRjLWYyZmQtNDVhNi1iNzM1LTgxNzI1NGFkZDU2ZiIsICJpZCI6ICIwYzhmMGY2Yy00YjY1LTRhODktYTI0YS0yN2NjNWNhNzNmNTcifQ.Em92UDP-KmcNd80Y-euTS2IrRkIE8qTisP3SXYkQi3c"
-      - name: "ALWAYS print kernel logs - especialy useful on failure"
-        if: always()
-        run: sudo dmesg
+  #github-paid-runner:
+    #if: ${{ github.repository == 'dagger/dagger' }}
+    #runs-on: ubuntu-22.04-16c-64g-600gb
+    #steps:
+      #- uses: actions/checkout@v3
+      #- uses: actions/setup-go@v4
+        #with:
+          #go-version: "1.20"
+          #cache-dependency-path: "internal/mage/go.sum"
+      #- name: ${{ inputs.mage-targets }}
+        #run: |
+          #if [ "${{ inputs.dev-engine }}" != "false" ]
+          #then
+            #./hack/dev
+            #export _EXPERIMENTAL_DAGGER_CLI_BIN="$PWD/bin/dagger"
+            #chmod +x $_EXPERIMENTAL_DAGGER_CLI_BIN
+            #export _EXPERIMENTAL_DAGGER_RUNNER_HOST=docker-container://dagger-engine.dev
+          #fi
+          #./hack/make ${{ inputs.mage-targets }}
+        #env:
+          #_EXPERIMENTAL_DAGGER_CLOUD_TOKEN: "p.eyJ1IjogIjFiZjEwMmRjLWYyZmQtNDVhNi1iNzM1LTgxNzI1NGFkZDU2ZiIsICJpZCI6ICIwYzhmMGY2Yy00YjY1LTRhODktYTI0YS0yN2NjNWNhNzNmNTcifQ.Em92UDP-KmcNd80Y-euTS2IrRkIE8qTisP3SXYkQi3c"
+      #- name: "ALWAYS print kernel logs - especialy useful on failure"
+        #if: always()
+        #run: sudo dmesg
 
   # Also use our own Dagger runner when
   # running in the dagger/dagger repo (including PRs)
