ci: remove silent to see where the time is being spent
Signed-off-by: Marcos Lilljedahl <marcosnils@gmail.com>

--- a/.github/actions/call/action.yml
+++ b/.github/actions/call/action.yml
@@ -98,7 +98,7 @@ runs:
         echo "::endgroup::"
 
         echo "::group::Dagger server version"
-        echo "{version}" | dagger --silent query
+        echo "{version}" | dagger query
         echo "::endgroup::"
 
     - name: ${{ inputs.function }}
